# Gazebo_playground

./: README.md  frames_2024-09-26_11.03.04.gv
src/gazebo_pg/: CMakeLists.txt  package.xml
src/gazebo_pg/cfg/: ros2_control.yaml
src/gazebo_pg/launch/: run.launch.py
src/gazebo_pg/materials/: body.material
src/gazebo_pg/materials/scripts/: bodyTexture.material
src/gazebo_pg/materials/textures/: old-military-tank-texture_544249-2903.avif
src/gazebo_pg/rviz/: cfg.rviz
src/gazebo_pg/src/: robot_control.cpp
src/gazebo_pg/urdf/: example_gazebo.xacro  example_robot.urdf.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
